--- a/src/main/resources/all_text_en.properties
+++ b/src/main/resources/all_text_en.properties
@@ -15,3 +15,26 @@ directions_button=Directions
 start_location=Starting location
 end_location=End location
 emergency_label=EMERGENCY
+my_requests=My requests
+mark_completed_button=Mark completed
+service_title=Title
+service_description=Description
+service_request_button=Request service
+make_request_label=Create request
+service_type=Service type
+add_path=Add a path
+add_location=Add location
+floor=Floor
+building=Building
+location_type=Location type
+long_name=Long name
+short_name=Short name
+3d_map=3D Map
+cafeteria=Cafeteria
+exit=Exit
+restroom=Restroom
+reception=Reception
+en=English
+ru=Russian
+es=Spanish
+language=Language
