--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -1,17 +1,40 @@
 stringy_test=This is a Spanish test
-logout=Cerrar \u0073\u0065\u0073\u0069\u00f3\u006e
+logout=Cerrar sesi\u00F3n
 view_log=Ver log
 username=Usario
 modify_map=Cambiar mapa
-password=\u0043\u006f\u006e\u0074\u0072\u0061\u0073\u0065\u00f1\u0061
-back=<- \u0061\u0074\u0072\u00e1\u0073
+password=Contrase\u00F1a
+back=<- atr\u00E1s
 to_be_completed_label=A completar:
-service_location=\u0055\u0062\u0069\u0063\u0061\u0063\u0069\u00f3\u006e
-login=Iniciar \u0073\u0065\u0073\u0069\u00f3\u006e
+service_location=Ubicaci\u00F3n
+login=Iniciar sesi\u00F3n
 quick_locations=Ubicaciones frecuentes
-select_location=Elegir \u0075\u0062\u0069\u0063\u0061\u0063\u0069\u00f3\u006e
+select_location=Elegir ubicaci\u00F3n
 stairs=Escalera
-directions_button=\u0044\u0069\u0072\u0065\u0063\u0063\u0069\u006f\u006e\u0065\u0073
-start_location=\u0055\u0062\u0069\u0063\u0061\u0063\u0069\u00f3\u006e inicial
+directions_button=Direcciones
+start_location=Ubicaci\u00F3n inicial
 end_location=Fin
 emergency_label=EMERGENCIA
+my_requests=Mis solicitudes
+mark_completed_button=Marcar completo
+service_title=T\u00EDtulo
+service_description=Descripci\u00F3n
+service_request_button=Solicitar servicio
+make_request_label=Solicitar servicio
+service_type=Tipo de servicio
+add_path=A\u00F1adir camino
+add_location=A\u00F1adir ubicaci\u00F3n
+floor=Piso
+building=Edificio
+location_type=Tipo de ubicaci\u00F3n
+long_name=Nombre largo
+short_name=Nombre corto
+3d_map=Mapa en 3D
+cafeteria=Cafeter\u00EDa
+exit=Salida
+restroom=Ba\u00F1o
+reception=Recepci\u00F3n
+en=Ingl\u00E9s
+ru=Ruso
+es=Espa\u00F1ol
+language=Idioma
