--- a/src/main/resources/all_text_ru.properties
+++ b/src/main/resources/all_text_ru.properties
@@ -1,17 +1,40 @@
 stringy_test=This is a Russian test
-logout=Выход
-modify_map=Изменить карту
-view_log=Открыть журнал
-username=Имя
-password=Пароль
-back=<- назад
-to_be_completed_label=Задачи для завершения
-service_location=Место
-login=Вход
-quick_locations=Быстрый поиск
-select_location=Выбрать место
-stairs=По лестнице
-directions_button=Маршрут
-start_location=Начальное местоположение
-end_location=Конец
-emergency_label=СРОЧНО
+logout=\u0412\u044B\u0445\u043E\u0434
+modify_map=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043A\u0430\u0440\u0442\u0443
+view_log=\u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0436\u0443\u0440\u043D\u0430\u043B
+username=\u0418\u043C\u044F
+password=\u041F\u0430\u0440\u043E\u043B\u044C
+back=<- \u043D\u0430\u0437\u0430\u0434
+to_be_completed_label=\u0417\u0430\u0434\u0430\u0447\u0438 \u0434\u043B\u044F \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u044F
+service_location=\u041C\u0435\u0441\u0442\u043E
+login=\u0412\u0445\u043E\u0434
+quick_locations=\u0411\u044B\u0441\u0442\u0440\u044B\u0439 \u043F\u043E\u0438\u0441\u043A
+select_location=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u043C\u0435\u0441\u0442\u043E
+stairs=\u041F\u043E \u043B\u0435\u0441\u0442\u043D\u0438\u0446\u0435
+directions_button=\u041C\u0430\u0440\u0448\u0440\u0443\u0442
+start_location=\u041D\u0430\u0447\u0430\u043B\u044C\u043D\u043E\u0435 \u043C\u0435\u0441\u0442\u043E\u043F\u043E\u043B\u043E\u0436\u0435\u043D\u0438\u0435
+end_location=\u041A\u043E\u043D\u0435\u0446
+emergency_label=\u0421\u0420\u041E\u0427\u041D\u041E
+my_requests=My requests
+mark_completed_button=Mark completed
+service_title=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+service_description=Description
+service_request_button=Request service
+make_request_label=Create request
+service_type=\u0422\u0438\u043F \u0441\u0435\u0440\u0432\u0438\u0441\u0430
+add_path=Add a path
+add_location=Add location
+floor=Floor
+building=Building
+location_type=Location type
+long_name=Long name
+short_name=Short name
+3d_map=3D Map
+cafeteria=Cafeteria
+exit=Exit
+restroom=Restroom
+reception=Reception
+en=\u0410\u043D\u0433\u043B\u0438\u0441\u043A\u0438\u0439
+ru=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+es=\u0418\u0441\u043F\u0430\u043D\u0441\u043A\u0438\u0439
+language=\u042F\u0437\u044B\u043A
