--- a/src/main/resources/all_text_en.properties
+++ b/src/main/resources/all_text_en.properties
@@ -38,3 +38,10 @@ en=English
 ru=Russian
 es=Spanish
 language=Language
+choose_path_algorithm=Choose Path Algorithm
+department=Department
+information=Information
+breadth_first=Breadth First
+depth_first=Depth First
+a_star=AStar
+find_nearest=Find Nearest
