--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -1,40 +1,69 @@
-stringy_test=This is a Spanish test
-logout=Cerrar sesi\u00F3n
-view_log=Ver log
-username=Usario
-modify_map=Cambiar mapa
-password=Contrase\u00F1a
-back=<- atr\u00E1s
-to_be_completed_label=A completar:
-service_location=Ubicaci\u00F3n
-login=Iniciar sesi\u00F3n
-quick_locations=Ubicaciones frecuentes
-select_location=Elegir ubicaci\u00F3n
-stairs=Escalera
-directions_button=Direcciones
-start_location=Ubicaci\u00F3n inicial
-end_location=Fin
-emergency_label=EMERGENCIA
-my_requests=Mis solicitudes
-mark_completed_button=Marcar completo
-service_title=T\u00EDtulo
-service_description=Descripci\u00F3n
-service_request_button=Solicitar servicio
-make_request_label=Solicitar servicio
-service_type=Tipo de servicio
-add_path=A\u00F1adir camino
-add_location=A\u00F1adir ubicaci\u00F3n
-floor=Piso
-building=Edificio
-location_type=Tipo de ubicaci\u00F3n
-long_name=Nombre largo
-short_name=Nombre corto
 3d_map=Mapa en 3D
+add_location=A\u00F1adir ubicaci\u00F3n
+back=<- atr\u00E1s
+building=Edificio
 cafeteria=Cafeter\u00EDa
-exit=Salida
-restroom=Ba\u00F1o
-reception=Recepci\u00F3n
+directions_button=Direcciones
+emergency_label=EMERGENCIA
 en=Ingl\u00E9s
-ru=Ruso
+end_location=Fin
 es=Espa\u00F1ol
+exit=Salida
+floor=Piso
 language=Idioma
+location_type=Tipo de ubicaci\u00F3n
+login=Iniciar sesi\u00F3n
+logout=Cerrar sesi\u00F3n
+long_name=Nombre largo
+make_request_label=Solicitar servicio
+mark_completed_button=Marcar completo
+modify_map=Cambiar mapa
+my_requests=Mis solicitudes
+password=Contrase\u00F1a
+quick_locations=Ubicaciones frecuentes
+reception=Recepci\u00F3n
+restroom=Ba\u00F1o
+ru=Ruso
+select_location=Elegir ubicaci\u00F3n
+service_description=Descripci\u00F3n
+service_location=Ubicaci\u00F3n
+service_request_button=Solicitar servicio
+service_title=T\u00EDtulo
+service_type=Tipo de servicio
+short_name=Nombre corto
+stairs=Escalera
+start_location=Ubicaci\u00F3n inicial
+stringy_test=This is a Spanish test
+to_be_completed_label=A completar:
+username=Usario
+view_log=Ver log
+a_star=A*
+add_edge=A\u00F1adir camino
+average_time_report=Average time before fulfillment
+breadth_first=B\u00FAsqueda en anchura
+cancel_edge=Cancel
+chart=Chart
+choose_floor=Choose Floor
+choose_path_algorithm=Choose Path Algorithm
+confirm=Confirm
+delete_location=Delete Location
+department=Department
+depth_first=B\u00FAsqueda en profundidad
+down=Down
+end_date=End date
+end_time=End time
+find_nearest=Find Nearest
+home=Home
+hours_unit=Hours
+information=Information
+location_one=Location One
+location_or_path=Location Or Path
+location_two=Location Two
+num_requests_report=Number of requests
+num_requests_unit=Number of request
+report_instructions=Select one or more service types on the left (hold ctrl to select multiple), select a type of report in the upper left, and select your starting and ending dates and times and the report type on the right
+report_types=Report types
+start_date=Start date
+start_time=Start time
+table=Table
+up=Up]
