--- a/src/main/resources/all_text_ru.properties
+++ b/src/main/resources/all_text_ru.properties
@@ -1,40 +1,69 @@
-stringy_test=This is a Russian test
-logout=\u0412\u044B\u0445\u043E\u0434
-modify_map=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043A\u0430\u0440\u0442\u0443
-view_log=\u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0436\u0443\u0440\u043D\u0430\u043B
-username=\u0418\u043C\u044F
-password=\u041F\u0430\u0440\u043E\u043B\u044C
+a_star=A*
+add_edge=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043F\u0443\u0442\u044C
+average_time_report=\u0421\u0440\u0435\u0434\u043D\u0435\u0435 \u0432\u0440\u0435\u043C\u044F \u0434\u043E \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u044F
+breadth_first=\u041F\u043E\u0438\u0441\u043A \u0432 \u0448\u0438\u0440\u0438\u043D\u0443
+cancel_edge=\u041E\u0442\u043C\u0435\u043D\u0430
+chart=\u0413\u0440\u0430\u0444\u0438\u043A
+choose_floor=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u044D\u0442\u0430\u0436
+choose_path_algorithm=\u0412\u044B\u0431\u043E\u0440 \u0430\u043B\u0433\u043E\u0440\u0438\u0442\u043C\u0430
+confirm=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C
+delete_location=\u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043C\u0435\u0441\u0442\u043E
+department=\u041E\u0442\u0434\u0435\u043B\u0435\u043D\u0438\u0435
+down=\u0412\u043D\u0438\u0437
+end_date=\u0414\u0430\u0442\u0430 \u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u044F
+end_time=\u0412\u0440\u0435\u043C\u044F \u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u044F
+find_nearest=\u041D\u0430\u0439\u0442\u0438 \u0431\u043B\u0438\u0436\u0430\u0439\u0448\u0438\u0439
+home=\u041D\u0430\u0447\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
+hours_unit=\u0427\u0430\u0441\u044B
+information=\u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
+location_one=\u041F\u0435\u0440\u0432\u043E\u0435 \u043C\u0435\u0441\u0442\u043E
+location_or_path=\u041C\u0435\u0441\u0442\u043E \u0438\u043B\u0438 \u043F\u0443\u0442\u044C
+location_two=\u0412\u0442\u043E\u0440\u043E\u0435 \u043C\u0435\u0441\u0442\u043E
+num_requests_report=Number of requests
+num_requests_unit=Number of request
+report_instructions=Select one or more service types on the left (hold ctrl to select multiple), select a type of report in the upper left, and select your starting and ending dates and times and the report type on the right
+report_types=Report types
+start_date=Start date
+start_time=Start time
+table=Table
+up=Up]
+3d_map=\u041A\u0430\u0440\u0442\u0430 3D
+add_location=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043C\u0435\u0441\u0442\u043E
 back=<- \u043D\u0430\u0437\u0430\u0434
-to_be_completed_label=\u0417\u0430\u0434\u0430\u0447\u0438 \u0434\u043B\u044F \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u044F
-service_location=\u041C\u0435\u0441\u0442\u043E
-login=\u0412\u0445\u043E\u0434
-quick_locations=\u0411\u044B\u0441\u0442\u0440\u044B\u0439 \u043F\u043E\u0438\u0441\u043A
-select_location=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u043C\u0435\u0441\u0442\u043E
-stairs=\u041F\u043E \u043B\u0435\u0441\u0442\u043D\u0438\u0446\u0435
+building=\u0417\u0434\u0430\u043D\u0438\u0435
+cafeteria=\u041A\u0430\u0444\u0435\u0442\u0435\u0440\u0438\u0439
 directions_button=\u041C\u0430\u0440\u0448\u0440\u0443\u0442
-start_location=\u041D\u0430\u0447\u0430\u043B\u044C\u043D\u043E\u0435 \u043C\u0435\u0441\u0442\u043E\u043F\u043E\u043B\u043E\u0436\u0435\u043D\u0438\u0435
-end_location=\u041A\u043E\u043D\u0435\u0446
 emergency_label=\u0421\u0420\u041E\u0427\u041D\u041E
-my_requests=My requests
-mark_completed_button=Mark completed
-service_title=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
-service_description=Description
-service_request_button=Request service
-make_request_label=Create request
-service_type=\u0422\u0438\u043F \u0441\u0435\u0440\u0432\u0438\u0441\u0430
-add_path=Add a path
-add_location=Add location
-floor=Floor
-building=Building
-location_type=Location type
-long_name=Long name
-short_name=Short name
-3d_map=3D Map
-cafeteria=Cafeteria
-exit=Exit
-restroom=Restroom
-reception=Reception
 en=\u0410\u043D\u0433\u043B\u0438\u0441\u043A\u0438\u0439
-ru=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+end_location=\u041A\u043E\u043D\u0435\u0446
 es=\u0418\u0441\u043F\u0430\u043D\u0441\u043A\u0438\u0439
+exit=\u0412\u044B\u0445\u043E\u0434
+floor=\u042D\u0442\u0430\u0436
 language=\u042F\u0437\u044B\u043A
+location_type=\u0422\u0438\u043F \u043C\u0435\u0441\u0442\u0430
+login=\u0412\u0445\u043E\u0434
+logout=\u0412\u044B\u0445\u043E\u0434
+long_name=\u041F\u043E\u043B\u043D\u043E\u0435 \u0438\u043C\u044F
+make_request_label=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0437\u0430\u0434\u0430\u043D\u0438\u0435
+mark_completed_button=\u0423\u043A\u0430\u0437\u0430\u0442\u044C \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u043D\u044B\u043C
+modify_map=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043A\u0430\u0440\u0442\u0443
+my_requests=\u041C\u043E\u0438 \u043F\u0440\u043E\u0441\u044C\u0431\u044B
+password=\u041F\u0430\u0440\u043E\u043B\u044C
+quick_locations=\u0411\u044B\u0441\u0442\u0440\u044B\u0439 \u043F\u043E\u0438\u0441\u043A
+reception=Reception
+restroom=Restroom
+ru=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+select_location=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u043C\u0435\u0441\u0442\u043E
+service_description=Description
+service_location=\u041C\u0435\u0441\u0442\u043E
+service_request_button=Request service
+service_title=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+service_type=\u0422\u0438\u043F \u0441\u0435\u0440\u0432\u0438\u0441\u0430
+short_name=Short name
+stairs=\u041F\u043E \u043B\u0435\u0441\u0442\u043D\u0438\u0446\u0435
+start_location=\u041D\u0430\u0447\u0430\u043B\u044C\u043D\u043E\u0435 \u043C\u0435\u0441\u0442\u043E\u043F\u043E\u043B\u043E\u0436\u0435\u043D\u0438\u0435
+stringy_test=This is a Russian test
+to_be_completed_label=\u0417\u0430\u0434\u0430\u0447\u0438 \u0434\u043B\u044F \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u044F
+username=\u0418\u043C\u044F
+view_log=\u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0436\u0443\u0440\u043D\u0430\u043B
+depth_first=\u041F\u043E\u0438\u0441\u043A \u0432 \u0433\u043B\u0443\u0431\u0438\u043D\u0443
