Add all remaining translated strings (#87)
* Translate more strings

* Translate all remaining strings

--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -6,7 +6,7 @@ cafeteria=Cafeter\u00EDa
 directions_button=Direcciones
 emergency_label=EMERGENCIA
 en=Ingl\u00E9s
-end_location=Fin
+end_location=Ubicación final
 es=Espa\u00F1ol
 exit=Salida
 floor=Piso
@@ -39,31 +39,31 @@ username=Usario
 view_log=Ver log
 a_star=A*
 add_edge=A\u00F1adir camino
-average_time_report=Average time before fulfillment
-breadth_first=B\u00FAsqueda en anchura
-cancel_edge=Cancel
-chart=Chart
-choose_floor=Choose Floor
-choose_path_algorithm=Choose Path Algorithm
-confirm=Confirm
-delete_location=Delete Location
-department=Department
-depth_first=B\u00FAsqueda en profundidad
-down=Down
-end_date=End date
-end_time=End time
-find_nearest=Find Nearest
-home=Home
-hours_unit=Hours
-information=Information
-location_one=Location One
-location_or_path=Location Or Path
-location_two=Location Two
-num_requests_report=Number of requests
-num_requests_unit=Number of request
-report_instructions=Select one or more service types on the left (hold ctrl to select multiple), select a type of report in the upper left, and select your starting and ending dates and times and the report type on the right
-report_types=Report types
+average_time_report=Tiempo promedio para compleción
+breadth_first=Búsqueda en anchura
+cancel_edge=Cancelar
+chart=Gráfico
+choose_floor=Elegir piso
+choose_path_algorithm=Elegir algoritmo
+confirm=Confirmar
+delete_location=Borrar ubicación
+department=Departamento
+depth_first=Búsqueda en profundidad
+down=Abajo
+end_date=Fecha final
+end_time=Tiempo final
+find_nearest=Búsqueda cercana
+home=Página principal
+hours_unit=Horas
+information=Información
+location_one=Primera ubicación
+location_or_path=Ubicación o camino
+location_two=Segunda ubicación
+num_requests_report=Número de solicitudes
+num_requests_unit=Número de solicitudes
+report_instructions=Elige uno o más tipos de servicios a la izquierda (use ctrl para elegir más que uno), elige un tipo de informe en la esquina superior izquierda y elige las fechas y los tiempos iniciales y finales a la derecha.
+report_types=Tipos de informes
 start_date=Start date
-start_time=Start time
-table=Table
-up=Up]
+start_time=Tiempo inicial
+table=Tabla
+up=Arriba
