--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -6,7 +6,7 @@ cafeteria=Cafeter\u00EDa
 directions_button=Direcciones
 emergency_label=EMERGENCIA
 en=Ingl\u00E9s
-end_location=Ubicación final
+end_location=Ubicaci\u00f3n final
 es=Espa\u00F1ol
 exit=Salida
 floor=Piso
@@ -39,29 +39,29 @@ username=Usario
 view_log=Ver log
 a_star=A*
 add_edge=A\u00F1adir camino
-average_time_report=Tiempo promedio para compleción
-breadth_first=Búsqueda en anchura
+average_time_report=Tiempo promedio para compleci\u00f3n
+breadth_first=B\u00fasqueda en anchura
 cancel_edge=Cancelar
-chart=Gráfico
+chart=Gr\u00e1fico
 choose_floor=Elegir piso
 choose_path_algorithm=Elegir algoritmo
 confirm=Confirmar
-delete_location=Borrar ubicación
+delete_location=Borrar ubicaci\u00f3n
 department=Departamento
-depth_first=Búsqueda en profundidad
+depth_first=B\u00fasqueda en profundidad
 down=Abajo
 end_date=Fecha final
 end_time=Tiempo final
-find_nearest=Búsqueda cercana
-home=Página principal
+find_nearest=B\u00fasqueda cercana
+home=P\u00e1gina principal
 hours_unit=Horas
-information=Información
-location_one=Primera ubicación
-location_or_path=Ubicación o camino
-location_two=Segunda ubicación
-num_requests_report=Número de solicitudes
-num_requests_unit=Número de solicitudes
-report_instructions=Elige uno o más tipos de servicios a la izquierda (use ctrl para elegir más que uno), elige un tipo de informe en la esquina superior izquierda y elige las fechas y los tiempos iniciales y finales a la derecha.
+information=Informaci\u00f3n
+location_one=Primera ubicaci\u00f3n
+location_or_path=Ubicaci\u00f3n o camino
+location_two=Segunda ubicaci\u00f3n
+num_requests_report=N\u00famero de solicitudes
+num_requests_unit=N\u00famero de solicitudes
+report_instructions=Elige uno o m\u00e1s tipos de servicios a la izquierda (use ctrl para elegir m\u00e1s que uno), elige un tipo de informe en la esquina superior izquierda y elige las fechas y los tiempos iniciales y finales a la derecha.
 report_types=Tipos de informes
 start_date=Start date
 start_time=Tiempo inicial
