--- a/src/main/resources/all_text_ru.properties
+++ b/src/main/resources/all_text_ru.properties
@@ -1,69 +1,69 @@
 a_star=A*
-add_edge=Добавить путь
-average_time_report=Среднее время до завершения
-breadth_first=Поиск в ширину
-cancel_edge=Отмена
-chart=График
-choose_floor=Выбрать этаж
-choose_path_algorithm=Выбор алгоритма
-confirm=Подтвердить
-delete_location=Удалить место
-department=Отделение
-down=Вниз
-end_date=Дата окончания
-end_time=Время окончания
-find_nearest=Найти ближайший
-home=Начальная страница
-hours_unit=Часы
-information=Информация
-location_one=Первое место
-location_or_path=Место или путь
-location_two=Второе место
-num_requests_report=Количество просьб
-num_requests_unit=Количество просьб
-report_instructions=Выберите один или несколько типов услуг слева (удерживайте ctrl, чтобы выбрать несколько), выберите тип отчета в левом верхнем углу и выберите даты и времена финальние и окончательные и тип отчета справа
-report_types=Типы просьб
-start_date=Начальная дата
-start_time=Начальное время
-table=Таблица
-up=Вверх
-3d_map=Карта 3D
-add_location=Добавить место
+add_edge=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043f\u0443\u0442\u044c
+average_time_report=\u0421\u0440\u0435\u0434\u043d\u0435\u0435 \u0432\u0440\u0435\u043c\u044f \u0434\u043e \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u0438\u044f
+breadth_first=\u041f\u043e\u0438\u0441\u043a \u0432 \u0448\u0438\u0440\u0438\u043d\u0443
+cancel_edge=\u041e\u0442\u043c\u0435\u043d\u0430
+chart=\u0413\u0440\u0430\u0444\u0438\u043a
+choose_floor=\u0412\u044b\u0431\u0440\u0430\u0442\u044c \u044d\u0442\u0430\u0436
+choose_path_algorithm=\u0412\u044b\u0431\u043e\u0440 \u0430\u043b\u0433\u043e\u0440\u0438\u0442\u043c\u0430
+confirm=\u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044c
+delete_location=\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u043c\u0435\u0441\u0442\u043e
+department=\u041e\u0442\u0434\u0435\u043b\u0435\u043d\u0438\u0435
+down=\u0412\u043d\u0438\u0437
+end_date=\u0414\u0430\u0442\u0430 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f
+end_time=\u0412\u0440\u0435\u043c\u044f \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f
+find_nearest=\u041d\u0430\u0439\u0442\u0438 \u0431\u043b\u0438\u0436\u0430\u0439\u0448\u0438\u0439
+home=\u041d\u0430\u0447\u0430\u043b\u044c\u043d\u0430\u044f \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430
+hours_unit=\u0427\u0430\u0441\u044b
+information=\u0418\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044f
+location_one=\u041f\u0435\u0440\u0432\u043e\u0435 \u043c\u0435\u0441\u0442\u043e
+location_or_path=\u041c\u0435\u0441\u0442\u043e \u0438\u043b\u0438 \u043f\u0443\u0442\u044c
+location_two=\u0412\u0442\u043e\u0440\u043e\u0435 \u043c\u0435\u0441\u0442\u043e
+num_requests_report=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u043f\u0440\u043e\u0441\u044c\u0431
+num_requests_unit=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u043f\u0440\u043e\u0441\u044c\u0431
+report_instructions=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043e\u0434\u0438\u043d \u0438\u043b\u0438 \u043d\u0435\u0441\u043a\u043e\u043b\u044c\u043a\u043e \u0442\u0438\u043f\u043e\u0432 \u0443\u0441\u043b\u0443\u0433 \u0441\u043b\u0435\u0432\u0430 (\u0443\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u0439\u0442\u0435 ctrl, \u0447\u0442\u043e\u0431\u044b \u0432\u044b\u0431\u0440\u0430\u0442\u044c \u043d\u0435\u0441\u043a\u043e\u043b\u044c\u043a\u043e), \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0442\u0438\u043f \u043e\u0442\u0447\u0435\u0442\u0430 \u0432 \u043b\u0435\u0432\u043e\u043c \u0432\u0435\u0440\u0445\u043d\u0435\u043c \u0443\u0433\u043b\u0443 \u0438 \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0434\u0430\u0442\u044b \u0438 \u0432\u0440\u0435\u043c\u0435\u043d\u0430 \u0444\u0438\u043d\u0430\u043b\u044c\u043d\u0438\u0435 \u0438 \u043e\u043a\u043e\u043d\u0447\u0430\u0442\u0435\u043b\u044c\u043d\u044b\u0435 \u0438 \u0442\u0438\u043f \u043e\u0442\u0447\u0435\u0442\u0430 \u0441\u043f\u0440\u0430\u0432\u0430
+report_types=\u0422\u0438\u043f\u044b \u043f\u0440\u043e\u0441\u044c\u0431
+start_date=\u041d\u0430\u0447\u0430\u043b\u044c\u043d\u0430\u044f \u0434\u0430\u0442\u0430
+start_time=\u041d\u0430\u0447\u0430\u043b\u044c\u043d\u043e\u0435 \u0432\u0440\u0435\u043c\u044f
+table=\u0422\u0430\u0431\u043b\u0438\u0446\u0430
+up=\u0412\u0432\u0435\u0440\u0445
+3d_map=\u041a\u0430\u0440\u0442\u0430 3D
+add_location=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043c\u0435\u0441\u0442\u043e
 back=<- \u043D\u0430\u0437\u0430\u0434
-building=Здание
-cafeteria=Кафетерий
+building=\u0417\u0434\u0430\u043d\u0438\u0435
+cafeteria=\u041a\u0430\u0444\u0435\u0442\u0435\u0440\u0438\u0439
 directions_button=\u041C\u0430\u0440\u0448\u0440\u0443\u0442
 emergency_label=\u0421\u0420\u041E\u0427\u041D\u041E
 en=\u0410\u043D\u0433\u043B\u0438\u0441\u043A\u0438\u0439
 end_location=\u041A\u043E\u043D\u0435\u0446
 es=\u0418\u0441\u043F\u0430\u043D\u0441\u043A\u0438\u0439
-exit=Выход
-floor=Этаж
+exit=\u0412\u044b\u0445\u043e\u0434
+floor=\u042d\u0442\u0430\u0436
 language=\u042F\u0437\u044B\u043A
-location_type=Тип места
+location_type=\u0422\u0438\u043f \u043c\u0435\u0441\u0442\u0430
 login=\u0412\u0445\u043E\u0434
 logout=\u0412\u044B\u0445\u043E\u0434
-long_name=Полное имя
-make_request_label=Создать просьбу
-mark_completed_button=Указать завершенным
+long_name=\u041f\u043e\u043b\u043d\u043e\u0435 \u0438\u043c\u044f
+make_request_label=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043f\u0440\u043e\u0441\u044c\u0431\u0443
+mark_completed_button=\u0423\u043a\u0430\u0437\u0430\u0442\u044c \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043d\u044b\u043c
 modify_map=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043A\u0430\u0440\u0442\u0443
-my_requests=Мои просьбы
+my_requests=\u041c\u043e\u0438 \u043f\u0440\u043e\u0441\u044c\u0431\u044b
 password=\u041F\u0430\u0440\u043E\u043B\u044C
 quick_locations=\u0411\u044B\u0441\u0442\u0440\u044B\u0439 \u043F\u043E\u0438\u0441\u043A
-reception=Приемная
-restroom=Туалет
+reception=\u041f\u0440\u0438\u0435\u043c\u043d\u0430\u044f
+restroom=\u0422\u0443\u0430\u043b\u0435\u0442
 ru=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
 select_location=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u043C\u0435\u0441\u0442\u043E
-service_description=Описание
+service_description=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435
 service_location=\u041C\u0435\u0441\u0442\u043E
-service_request_button=Создать просьбу
+service_request_button=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043f\u0440\u043e\u0441\u044c\u0431\u0443
 service_title=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
 service_type=\u0422\u0438\u043F \u0441\u0435\u0440\u0432\u0438\u0441\u0430
-short_name=Краткое имя
+short_name=\u041a\u0440\u0430\u0442\u043a\u043e\u0435 \u0438\u043c\u044f
 stairs=\u041F\u043E \u043B\u0435\u0441\u0442\u043D\u0438\u0446\u0435
 start_location=\u041D\u0430\u0447\u0430\u043B\u044C\u043D\u043E\u0435 \u043C\u0435\u0441\u0442\u043E\u043F\u043E\u043B\u043E\u0436\u0435\u043D\u0438\u0435
 stringy_test=This is a Russian test
 to_be_completed_label=\u0417\u0430\u0434\u0430\u0447\u0438 \u0434\u043B\u044F \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u044F
 username=\u0418\u043C\u044F
 view_log=\u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0436\u0443\u0440\u043D\u0430\u043B
-depth_first=Поиск в глубину
+depth_first=\u041f\u043e\u0438\u0441\u043a \u0432 \u0433\u043b\u0443\u0431\u0438\u043d\u0443
