--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -6,7 +6,7 @@ cafeteria=Cafeter\u00EDa
 directions_button=Direcciones
 emergency_label=EMERGENCIA
 en=Ingl\u00E9s
-end_location=Ubicaci\u00f3n final
+end_location=Ubicaci\u00F3n final
 es=Espa\u00F1ol
 exit=Salida
 floor=Piso
@@ -39,31 +39,34 @@ username=Usario
 view_log=Ver log
 a_star=A*
 add_edge=A\u00F1adir camino
-average_time_report=Tiempo promedio para compleci\u00f3n
-breadth_first=B\u00fasqueda en anchura
+average_time_report=Tiempo promedio para compleci\u00F3n
+breadth_first=B\u00FAsqueda en anchura
 cancel_edge=Cancelar
-chart=Gr\u00e1fico
+chart=Gr\u00E1fico
 choose_floor=Elegir piso
 choose_path_algorithm=Elegir algoritmo
 confirm=Confirmar
-delete_location=Borrar ubicaci\u00f3n
+delete_location=Borrar ubicaci\u00F3n
 department=Departamento
-depth_first=B\u00fasqueda en profundidad
+depth_first=B\u00FAsqueda en profundidad
 down=Abajo
 end_date=Fecha final
 end_time=Tiempo final
-find_nearest=B\u00fasqueda cercana
-home=P\u00e1gina principal
+find_nearest=B\u00FAsqueda cercana
+home=P\u00E1gina principal
 hours_unit=Horas
-information=Informaci\u00f3n
-location_one=Primera ubicaci\u00f3n
-location_or_path=Ubicaci\u00f3n o camino
-location_two=Segunda ubicaci\u00f3n
-num_requests_report=N\u00famero de solicitudes
-num_requests_unit=N\u00famero de solicitudes
-report_instructions=Elige uno o m\u00e1s tipos de servicios a la izquierda (use ctrl para elegir m\u00e1s que uno), elige un tipo de informe en la esquina superior izquierda y elige las fechas y los tiempos iniciales y finales a la derecha.
+information=Informaci\u00F3n
+location_one=Primera ubicaci\u00F3n
+location_or_path=Ubicaci\u00F3n o camino
+location_two=Segunda ubicaci\u00F3n
+num_requests_report=N\u00FAmero de solicitudes
+num_requests_unit=N\u00FAmero de solicitudes
+report_instructions=Elige uno o m\u00E1s tipos de servicios a la izquierda (use ctrl para elegir m\u00E1s que uno), elige un tipo de informe en la esquina superior izquierda y elige las fechas y los tiempos iniciales y finales a la derecha.
 report_types=Tipos de informes
 start_date=Start date
 start_time=Tiempo inicial
 table=Tabla
 up=Arriba
+confirm_coord=Confirmar
+location=ubicaci\u00F3n
+step_directions=Instrucciones paso a paso
