--- a/src/main/resources/all_text_en.properties
+++ b/src/main/resources/all_text_en.properties
@@ -72,3 +72,6 @@ location=location
 confirm_coord=Confirm
 step_directions=Step-by-Step Directions
 dijkstras=Dijkstras
+next=Next
+previous=Previous
+step=Step
