--- a/src/main/resources/all_text_en.properties
+++ b/src/main/resources/all_text_en.properties
@@ -47,14 +47,14 @@ num_requests_unit=Number of requests
 password=Password
 quick_locations=Quick Locations
 reception=Reception
-report_instructions=Select one or more edu.wpi.cs3733d18.teamS.service types on the left (hold ctrl to select multiple), select a type of report in the upper left, and select your starting and ending dates and times and the report type on the right
+report_instructions=Select one or more service types on the left (hold ctrl to select multiple), select a type of report in the upper left, and select your starting and ending dates and times and the report type on the right
 report_types=Report types
 restroom=Restroom
 ru=Russian
 select_location=Select location
 service_description=Description
 service_location=Location
-service_request_button=Request edu.wpi.cs3733d18.teamS.service
+service_request_button=Request Service
 service_title=Title
 service_type=Service type
 short_name=Short name
@@ -77,3 +77,11 @@ previous=Previous
 step=Step
 disable_location=disable location
 enable_location=enable location
+reports = Reports
+admin = Admin
+first_name= First Name
+last_name = Last Name
+type_of_user = Type of User
+add_user = Add User
+delete_user = Delete User
+modify_user = Modify User
