--- a/src/main/resources/all_text_en.properties
+++ b/src/main/resources/all_text_en.properties
@@ -77,6 +77,7 @@ previous=Previous
 step=Step
 disable_location=disable location
 enable_location=enable location
+set=Set
 reports = Reports
 admin = Admin
 first_name= First Name
