--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -63,13 +63,25 @@ num_requests_report=N\u00FAmero de solicitudes
 num_requests_unit=N\u00FAmero de solicitudes
 report_instructions=Elige uno o m\u00E1s tipos de servicios a la izquierda (use ctrl para elegir m\u00E1s que uno), elige un tipo de informe en la esquina superior izquierda y elige las fechas y los tiempos iniciales y finales a la derecha.
 report_types=Tipos de informes
-start_date=Start date
+start_date=Fecha inicial
 start_time=Tiempo inicial
 table=Tabla
 up=Arriba
 confirm_coord=Confirmar
 location=ubicaci\u00F3n
 step_directions=Instrucciones paso a paso
+2d_map=Mapa 2D
+dijkstras=Dijkstras
+next=Pr\u00F3ximo
+previous=Previo
+step=Paso
+fulfiller_box=Cumplidor
+num_fulfillable_requests=N\u00FAmero de solicitudes completables
+num_fulfilled_requests=N\u00FAmero de solicitudes completados
+avg_fulfill_time=Tiempo promedio para compleci\u00F3n
+disable_location=apagar ubicaci\u00F3n
+enable_location=encender ubicaci\u00F3n
+pathfind_button=Navegar a la solicitud
 directions_from=Direcciones de
 to=a
 first_step_dirs=Primero, comienza a caminar hacia
