--- a/src/main/resources/all_text_en.properties
+++ b/src/main/resources/all_text_en.properties
@@ -1,5 +1,5 @@
-3d_map=3D Map
 2d_map=2D Map
+3d_map=3D Map
 a_star=AStar
 add_edge=Add Path
 add_location=Add location
@@ -68,13 +68,20 @@ to_be_completed_label=To be completed:
 up=Up
 username=Username
 view_log=View log
-location=location
 confirm_coord=Confirm
+location=location
 step_directions=Step-by-Step Directions
 dijkstras=Dijkstras
 next=Next
 previous=Previous
 step=Step
+fulfiller_box=Fulfiller
+num_fulfillable_requests=Number of fulfillable requests
+num_fulfilled_requests=Number of fulfilled requests
+avg_fulfill_time=Average fulfillment time
+disable_location=disable location
+enable_location=enable location
+pathfind_button=Navigate to request
 directions_from=Directions from
 to=to
 first_step_dirs=First, begin walking towards
