--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -61,7 +61,7 @@ location_or_path=Ubicaci\u00F3n o camino
 location_two=Segunda ubicaci\u00F3n
 num_requests_report=N\u00FAmero de solicitudes
 num_requests_unit=N\u00FAmero de solicitudes
-report_instructions=Elige uno o m\u00E1s tipos de servicios a la izquierda (use ctrl para elegir m\u00E1s que uno), elige un tipo de informe en la esquina superior izquierda y elige las fechas y los tiempos iniciales y finales a la derecha.
+report_instructions=Elige una categor\u00EDa o m\u00E1s a la izquierda (use ctrl para elegir m\u00E1s que uno), elige un tipo de informe en la esquina superior izquierda y elige las fechas y los tiempos iniciales y finales a la derecha.
 report_types=Tipos de informes
 start_date=Fecha inicial
 start_time=Tiempo inicial
