--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -95,3 +95,13 @@ turn_left=Dobla a la izquierda
 continue_straight=Sigue derecho
 call=Llamar
 text=SMS
+set=Cambiar
+reports = Informes
+admin = Admin
+first_name= Nombre
+last_name = Apellido
+type_of_user = Tipo de usario
+add_user = A\u00F1adir usario
+delete_user = Borar usario
+modify_user = Modificar usario
+about_page=Sobre
