--- a/src/main/resources/all_text_en.properties
+++ b/src/main/resources/all_text_en.properties
@@ -79,23 +79,19 @@ fulfiller_box=Fulfiller
 num_fulfillable_requests=Number of fulfillable requests
 num_fulfilled_requests=Number of fulfilled requests
 avg_fulfill_time=Average fulfillment time
-pathfind_button=Navigate to request
+disable_location=disable location
 directions_from=Directions from
 to=to
 first_step_dirs=First, begin walking towards
 stairs_up=Use stairs or elevator to go up to floor 
 stairs_down=Use stairs or elevator to go down to floor 
-in=in
+in=In
 feet=feet
 destination_to=Destination is in
-turn_right=Turn right
-turn_left=Turn left
-continue_straight=Continue straight
-text=Text
-call=Call
-disable_location=disable location
+turn_right=turn right
+turn_left=turn left
+continue_straight=continue straight
 enable_location=enable location
-set=Set
 reports = Reports
 admin = Admin
 first_name= First Name
@@ -104,5 +100,8 @@ type_of_user = Type of User
 add_user = Add User
 delete_user = Delete User
 modify_user = Modify User
+pathfind_button=Navigate to request
+set=Set
 about_page=About
-
+prescription_request=Make a Prescription Request
+it_request=Make an IT Request
