--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -84,15 +84,15 @@ enable_location=encender ubicaci\u00F3n
 pathfind_button=Navegar a la solicitud
 directions_from=Direcciones de
 to=a
-first_step_dirs=Primero, comienza a caminar hacia
-stairs_up=Usa la escalera o el elevador para subir al piso
-stairs_down=Usa la escalera o el elevador para bajar al piso
+first_step_dirs=primero, comienza a caminar hacia
+stairs_up=usa la escalera o el elevador para subir al piso
+stairs_down=usa la escalera o el elevador para bajar al piso
 in=en
 feet=pies
 destination_to=El destino est\u00E1 en
-turn_right=Dobla a la derecha
-turn_left=Dobla a la izquierda
-continue_straight=Sigue derecho
+turn_right=dobla a la derecha
+turn_left=dobla a la izquierda
+continue_straight=sigue derecho
 call=Llamar
 text=SMS
 set=Cambiar
