Home screen map (#194)
* new map pop-up for selecting where to go, just a placeholder map/button. Not functional

* you can choose destination from a new window, which invokes pathfinding. *Node: currently closes current scene before switching which may cause problems later

* integrated new map into the homescreen, pathfinds

* Fixed broken edge

--- a/src/main/resources/all_text_en.properties
+++ b/src/main/resources/all_text_en.properties
@@ -105,3 +105,5 @@ set=Set
 about_page=About
 prescription_request=Make a Prescription Request
 it_request=Make an IT Request
+map=View Map
+map_instructions=Click Anywhere to Pathfind
