--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -105,3 +105,15 @@ add_user = A\u00F1adir usario
 delete_user = Borar usario
 modify_user = Modificar usario
 about_page=Sobre
+prescription_request=Make a Prescription Request
+it_request=Make an IT Request
+map=View Map
+map_instructions=Click Anywhere to Pathfind
+special_request = Special Requests
+gift_request = Gift Request
+voice_recognition = Voice Recognition
+food_request = Food Request
+room_service = Room Service
+security_request = Security Request
+transportation_request = Transportation Request
+sanitation_request = Sanitation Request
