--- a/src/main/resources/all_text_ru.properties
+++ b/src/main/resources/all_text_ru.properties
@@ -104,3 +104,15 @@ add_user = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0430\u043A\u0430\u
 delete_user = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0430\u043A\u0430\u0443\u043D\u0442
 modify_user = \u041F\u043E\u043C\u0435\u043D\u044F\u0442\u044C \u0430\u043A\u0430\u0443\u043D\u0442
 about_page=\u041E \u043D\u0430\u0441
+prescription_request=Make a Prescription Request
+it_request=Make an IT Request
+map=View Map
+map_instructions=Click Anywhere to Pathfind
+special_request = Special Requests
+gift_request = Gift Request
+voice_recognition = Voice Recognition
+food_request = Food Request
+room_service = Room Service
+security_request = Security Request
+transportation_request = Transportation Request
+sanitation_request = Sanitation Request
