--- a/src/main/resources/all_text_en.properties
+++ b/src/main/resources/all_text_en.properties
@@ -103,16 +103,13 @@ modify_user = Modify User
 pathfind_button=Navigate to request
 set=Set
 about_page=About
-prescription_request=Make a Prescription Request
-it_request=Make an IT Request
+prescription_request=Rx
+it_request=IT
 map=View Map
 map_instructions=Click Anywhere to Pathfind
 special_request = Special Requests
-gift_request = Gift Request
-voice_recognition = Voice Recognition
-food_request = Food Request
-room_service = Room Service
-security_request = Security Request
-transportation_request = Transportation Request
-sanitation_request = Sanitation Request
+gift_request = Gift
+voice_recognition = Voice
+security_request = Security
+transportation_request = Transport
 use_map=Use Map
