--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -114,5 +114,4 @@ gift_request = Gift
 voice_recognition = Voice
 security_request = Security
 transportation_request = Transport
-Back=Atr\u00E1s
-Home=P\u00E1gina principal
+sanitation_request = Sanitation Request
