line and pie charts

--- a/src/main/resources/all_text_ru.properties
+++ b/src/main/resources/all_text_ru.properties
@@ -113,3 +113,10 @@ gift_request = Gift
 voice_recognition = Voice 
 security_request = Security
 transportation_request = Transport
+user_breakdown_report=Breakdown by user
+percent_unit=Percent
+requests_unit=Requests
+user_timespent_report=Time spent by user
+user_fulfillment_report=Fulfillments by user
+num_fulfills_daily=Daily fulfillments
+num_requests_daily=Daily requests
