line and pie charts (#230)

--- a/src/main/resources/all_text_en.properties
+++ b/src/main/resources/all_text_en.properties
@@ -113,6 +113,13 @@ voice_recognition = Voice
 security_request = Security
 transportation_request = Transport
 use_map=Use Map
+user_breakdown_report=Requests by user
+percent_unit=Percent
+requests_unit=Requests
+user_timespent_report=Time spent by user
+user_fulfillment_report=Fulfillments by user
+num_fulfills_daily=Daily fulfillments
+num_requests_daily=Daily requests
 Back=Back
 Home=Home
 Credits=Credits
