--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -107,17 +107,17 @@ modify_user = Modificar usario
 about_page=Sobre
 prescription_request=Rx
 it_request=IT
-map=View Map
-map_instructions=Click Anywhere to Pathfind
-special_request = Special Requests
-gift_request = Gift
-voice_recognition = Voice
-security_request = Security
-transportation_request = Transport
+map=Ver Mapa
+map_instructions=Haga clic en cualquier lugar para obtener direcci\u00F3nes
+special_request = Solicitudes especiales
+gift_request = Regalo
+voice_recognition = Voz
+security_request = Seguridad
+transportation_request = Transporte
 user_breakdown_report=Requests by user
 percent_unit=Percent
 requests_unit=Requests
 user_timespent_report=Time spent by user
 user_fulfillment_report=Fulfillments by user
 num_fulfills_daily=Daily fulfillments
-num_requests_daily=Daily requests
+num_requests_daily=Daily request
