--- a/src/main/resources/all_text_ru.properties
+++ b/src/main/resources/all_text_ru.properties
@@ -106,11 +106,14 @@ modify_user = \u041F\u043E\u043C\u0435\u043D\u044F\u0442\u044C \u0430\u043A\u043
 about_page=\u041E \u043D\u0430\u0441
 prescription_request=Rx
 it_request=IT
-map=View Map
-map_instructions=Click Anywhere to Pathfind
-special_request = Special Requests
-gift_request = Gift 
-voice_recognition = Voice 
+map=\u041F\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u043A\u0430\u0440\u0442\u0443
+map_instructions=\u0429\u0435\u043B\u043A\u043D\u0438\u0442\u0435 \u0432 \u043B\u044E\u0431\u043E\u043C \u043C\u0435\u0441\u0442\u0435
+special_request = \u041E\u0441\u043E\u0431\u044B\u0435 \u0437\u0430\u043F\u0440\u043E\u0441\u044B
+gift_request = \u041F\u043E\u0434\u0430\u0440\u043E\u043A
+voice_recognition = \u0413\u043E\u043B\u043E\u0441
+security_request = \u041E\u0445\u0440\u0430\u043D\u0430
+transportation_request = \u0422\u0440\u0430\u043D\u0441\u043F\u043E\u0440\u0442
+timeout=\u0412\u0440\u0435\u043C\u044F \u0434\u043E \u043F\u0440\u0435\u0440\u044B\u0432\u0430\u043D\u0438\u044F
 security_request = Security
 transportation_request = Transport
 user_breakdown_report=Breakdown by user
@@ -119,4 +122,4 @@ requests_unit=Requests
 user_timespent_report=Time spent by user
 user_fulfillment_report=Fulfillments by user
 num_fulfills_daily=Daily fulfillments
-num_requests_daily=Daily requests
+num_requests_daily=Daily request
