--- a/src/main/resources/all_text_es.properties
+++ b/src/main/resources/all_text_es.properties
@@ -108,16 +108,22 @@ about_page=Sobre
 prescription_request=Rx
 it_request=IT
 map=Ver Mapa
-map_instructions=Haga clic en cualquier lugar para obtener direcci\u00F3nes
+map_instructions=Haga clic en cualquier lugar
 special_request = Solicitudes especiales
 gift_request = Regalo
 voice_recognition = Voz
 security_request = Seguridad
 transportation_request = Transporte
-user_breakdown_report=Requests by user
-percent_unit=Percent
-requests_unit=Requests
-user_timespent_report=Time spent by user
-user_fulfillment_report=Fulfillments by user
-num_fulfills_daily=Daily fulfillments
-num_requests_daily=Daily request
+user_breakdown_report=Solicitudes del usuario
+percent_unit=\u0417\u0430\u043F\u0440\u043E\u0441\u044B \u043E\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+requests_unit=Por ciento
+user_timespent_report=Tiempo usado
+user_fulfillment_report=Completado por usario
+num_fulfills_daily=Completado cada d\u00EDa
+num_requests_daily=Pedido cada d\u00EDa
+Back=Atr\u00E1s
+Home=P\u00E1gina principal
+Credits=Cr\u00E9ditos
+view_map=Ver mapa
+call=Llamar
+search_by_name=Buscar por nombre
