--- a/src/main/resources/all_text_ru.properties
+++ b/src/main/resources/all_text_ru.properties
@@ -106,7 +106,7 @@ modify_user = \u041F\u043E\u043C\u0435\u043D\u044F\u0442\u044C \u0430\u043A\u043
 about_page=\u041E \u043D\u0430\u0441
 prescription_request=Rx
 it_request=IT
-map=\u041F\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u043A\u0430\u0440\u0442\u0443
+map=\u041F\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u043A\u0430\u0440\u0442\u0443\u0432
 map_instructions=\u0429\u0435\u043B\u043A\u043D\u0438\u0442\u0435 \u0432 \u043B\u044E\u0431\u043E\u043C \u043C\u0435\u0441\u0442\u0435
 special_request = \u041E\u0441\u043E\u0431\u044B\u0435 \u0437\u0430\u043F\u0440\u043E\u0441\u044B
 gift_request = \u041F\u043E\u0434\u0430\u0440\u043E\u043A
@@ -114,12 +114,17 @@ voice_recognition = \u0413\u043E\u043B\u043E\u0441
 security_request = \u041E\u0445\u0440\u0430\u043D\u0430
 transportation_request = \u0422\u0440\u0430\u043D\u0441\u043F\u043E\u0440\u0442
 timeout=\u0412\u0440\u0435\u043C\u044F \u0434\u043E \u043F\u0440\u0435\u0440\u044B\u0432\u0430\u043D\u0438\u044F
-security_request = Security
-transportation_request = Transport
-user_breakdown_report=Breakdown by user
-percent_unit=Percent
-requests_unit=Requests
-user_timespent_report=Time spent by user
-user_fulfillment_report=Fulfillments by user
-num_fulfills_daily=Daily fulfillments
-num_requests_daily=Daily request
+user_breakdown_report=\u041F\u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044E
+percent_unit=\u041F\u0440\u043E\u0446\u0435\u043D\u0442
+requests_unit=\u0417\u0430\u043F\u0440\u043E\u0441\u044B
+user_timespent_report=\u0418\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u043D\u043E \u0432\u0440\u0435\u043C\u044F
+user_fulfillment_report=\u0417\u0430\u043A\u043E\u043D\u0447\u0435\u043D\u043E \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0435\u043C
+num_fulfills_daily=\u0417\u0430\u043A\u043E\u043D\u0447\u0435\u043D\u043E \u043A\u0430\u0436\u0434\u044B\u0439 \u0434\u0435\u043D\u044C
+num_requests_daily=\u0417\u0430\u043F\u0440\u043E\u0448\u0435\u043D\u043D\u043E \u043A\u0430\u0436\u0434\u044B\u0439 \u0434\u0435\u043D\u044C
+Back=\u041D\u0430\u0437\u0430\u0434
+Home=\u0413\u043B\u0430\u0432\u043D\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
+Credits=\u041A\u0440\u0435\u0434\u0438\u0442\u044B
+view_map=View Map
+text=\u041F\u043E\u0441\u043B\u0430\u0442\u044C SMS
+call=\u041F\u043E\u0437\u0432\u043E\u043D\u0438\u0442\u044C
+search_by_name=\u041F\u043E\u0438\u0441\u043A \u043F\u043E \u0438\u043C\u0435\u043D\u0438
